--- a/src/main/resources/static/css/pages/chat_page.css
+++ b/src/main/resources/static/css/pages/chat_page.css
@@ -1,324 +1,99 @@
 .chat-container {
-  padding: 1.25rem;
-  display: grid;
-  grid-template-columns: 1fr auto;
-  gap: 3.75rem;
+  display: flex;
+  gap: 1.25rem;
   width: 100%;
+  height: 100%;
+  justify-content: flex-end;
 }
-.chat-container .block-title {
-  font-size: 1.5rem;
-  color: black;
+.chat-container .chat-block {
+  max-width: 29.0625rem;
+  width: 29.0625rem;
+  height: auto;
+  background-color: #262626;
+  border-radius: 0.625rem;
 }
-.chat-container .block-shadow {
-  box-shadow: 0.25rem 0.25rem 2.09375rem -0.3125rem rgba(0, 0, 0, 0.05);
+.chat-container .chat-block-content {
+  height: 26.875rem;
+}
+.chat-container .chat-block-header {
+  display: flex;
+  justify-content: space-between;
+  padding: 1.25rem;
+  background-color: #3A3A3A;
+  border-top-left-radius: 0.625rem;
+  border-top-right-radius: 0.625rem;
+}
+.chat-container .chat-block-title {
+  color: white;
+  font-weight: 600;
+}
+.chat-container__no-messages-exception {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.chat-container__no-messages-decoration {
+  width: 9.375rem;
+  height: auto;
+  margin-bottom: 1.875rem;
+}
+.chat-container__no-messages-title {
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 0.75rem;
 }
 .chat-container__chats {
+  box-shadow: 0 0 0.84375rem -0.3125rem rgba(0, 0, 0, 0.05);
+}
+.chat-container__chats-container {
   width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
 }
 .chat-container__message {
-  height: 5.625rem;
   width: 100%;
-  display: flex;
-  padding: 1.125rem;
-  background-color: white;
-  border-radius: 1.25rem;
-  justify-content: space-between;
-  position: relative;
-  margin-bottom: 1.25rem;
-  border: 0.0625rem solid transparent;
-}
-.chat-container__message:first-child {
-  margin-top: 1.25rem;
-}
-.chat-container__message:last-child {
-  margin-bottom: 2.5rem;
-}
-.chat-container__message:last-child::after {
-  all: unset !important;
-}
-.chat-container__message::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 0.0625rem;
-  background-color: rgba(0, 0, 0, 0.025);
-  z-index: 1;
-  margin-bottom: -0.625rem;
-}
-.chat-container__message:hover {
-  border-color: #3763F1;
-}
-.chat-container__message-left {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.chat-container__message-right {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-}
-.chat-container__message-username {
-  font-size: 1rem;
-  font-weight: 600;
-  color: black;
-}
-.chat-container__message-text {
-  font-size: 1rem;
-  color: #7F7F7F;
-  display: flex;
-}
-.chat-container__message-text img {
-  margin-right: 0.625rem;
-  width: 1.25rem;
-  height: 1.25rem;
-}
-.chat-container__message-date {
-  font-size: 1rem;
-  color: #BFBFBF;
-}
-.chat-container__add-chat-button {
-  font-weight: 600;
-  color: #3763F1;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-decoration: none;
-}
-.chat-container__add-chat-button:hover {
-  text-decoration: underline;
-}
-.chat-container .widget-block {
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  padding: 1rem;
-  border-radius: 1.25rem;
-  margin-top: 1.25rem;
-  font-size: 16px;
-}
-.chat-container .widget-title {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: black;
-  margin-bottom: 1rem;
-}
-.chat-container__widgets-more-icon {
-  text-decoration: none;
-}
-.chat-container__widgets-more-icon img {
-  width: 1.5625rem;
-  height: 1.5625rem;
-  vertical-align: middle;
-}
-.chat-container__widgets-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.chat-container__online-user {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: relative;
-  margin-bottom: 1.25rem;
-}
-.chat-container__online-user:last-child::after {
-  all: unset !important;
-}
-.chat-container__online-user::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 0.0625rem;
-  background-color: rgba(0, 0, 0, 0.025);
-  z-index: 1;
-  margin-bottom: -0.625rem;
-}
-.chat-container__online-username {
-  color: #3763F1;
-}
-.chat-container__online-next {
-  text-decoration: none;
-}
-.chat-container__online-next img {
-  width: 1.5625rem;
-  height: 1.5625rem;
-  vertical-align: middle;
-}
-.chat-container__online-more-button {
-  width: 100%;
-  background-color: #F2F2F2;
-  color: black;
-  font-size: 1rem;
-  height: 3.75rem;
-  border-radius: 0.625rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: all 0.1s ease-in-out;
-  text-decoration: none;
-}
-.chat-container__online-more-button:hover {
-  transform: scale(0.975);
-}
-.chat-container__statistics-items {
-  display: flex;
-  flex-direction: column;
-}
-.chat-container__statistics-item {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 1rem;
-}
-.chat-container__statistics-item:last-child {
-  margin-bottom: 0;
-}
-.chat-container__statistics-name {
-  color: rgba(0, 0, 0, 0.5);
-}
-.chat-container__statistics-value {
-  color: #3763F1;
-}
-.chat-container__freq-friend-link {
-  text-decoration: none;
-  width: 100%;
-  padding: 1.25rem 0;
-  background-color: #3763F1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  border-radius: 0.625rem;
-  transition: all 0.05s ease-in-out;
-}
-.chat-container__freq-friend-link img {
-  width: 1.5625rem;
-  height: 1.5625rem;
-  vertical-align: center;
-  margin-right: 0.625rem;
-}
-.chat-container__freq-friend-link:hover {
-  opacity: 75%;
-}
-.chat-container__widgets {
-  width: 18.75rem;
-}
-.chat-container__finder-container {
-  display: flex;
-  flex-direction: column;
-  gap: 1.25rem;
-  justify-items: center;
-}
-.chat-container__finder-search-block {
-  display: grid;
-  grid-template-columns: 1fr auto;
-  gap: 1rem;
-}
-.chat-container__finder-search-input {
-  all: unset;
-  width: 100%;
-  border-radius: 0.625rem;
-  background-color: #F5F5F5;
-  padding: 1.25rem;
-  color: black;
-  box-sizing: border-box;
-}
-.chat-container__finder-search-button {
-  all: unset;
-  height: 100%;
-  aspect-ratio: 1/1;
-  border: 0.0625rem solid #3763F1;
-  border-radius: 0.625rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.chat-container__finder-search-button img {
-  width: 1.5625rem;
-  height: 1.5625rem;
-  vertical-align: middle;
-}
-.chat-container__finder-search-button:hover {
-  cursor: pointer;
-  background-color: rgba(55, 99, 241, 0.05);
-}
-.chat-container__finder-users-default-container {
-  display: flex;
-  flex-direction: column;
-  max-height: 15.625rem;
-  overflow-y: auto;
-  transition: mask-image 0.3s ease;
-  padding: 1.25rem;
-  background-color: rgba(55, 99, 241, 0.05);
-  border-radius: 0.625rem;
-}
-.chat-container__finder-users-default-container::-webkit-scrollbar {
-  display: none;
-}
-.chat-container__finder-users-empty {
-  width: 100%;
-  color: black;
-  font-weight: 600;
-  text-align: center;
-}
-.chat-container__finder-mini-title {
-  color: #3763F1;
-  font-weight: 600;
-  display: flex;
-  align-items: center;
-}
-.chat-container__finder-search-info {
-  background-color: #3763F1;
-  border-radius: 0.625rem;
-  font-size: 0.6875rem;
-  color: white;
-  padding: 0.625rem;
-  margin-left: 0.625rem;
-  box-sizing: border-box;
-  font-weight: 500;
-}
-.chat-container__finder-user {
-  font-size: 1rem;
-  padding-bottom: 1.25rem;
-  margin-bottom: 1.25rem;
-  border: 0.0625rem solid rgba(0, 0, 0, 0.05);
+  background-color: #292929;
+  border: 0.03125rem solid rgba(255, 255, 255, 0.05);
   border-left-width: 0;
   border-right-width: 0;
   border-top-width: 0;
-  display: flex;
-  justify-content: space-between;
+  padding: 1.25rem;
+  font-size: 0.75rem;
+  display: grid;
+  grid-template-columns: 1fr 3fr 3fr;
+  gap: 15px;
   align-items: center;
+  transition: all 0.15s ease-in-out;
 }
-.chat-container__finder-user:last-child {
-  border: none;
-  margin-bottom: 0;
-  padding-bottom: 0;
+.chat-container__message:hover {
+  background-color: transparent;
 }
-.chat-container__finder-user-left {
-  display: flex;
-  gap: 1.875rem;
+.chat-container__message-date {
+  color: rgba(255, 255, 255, 0.25);
+  font-weight: 400;
 }
-.chat-container__finder-user-name {
-  font-weight: 600;
+.chat-container__message-username {
+  color: white;
 }
-.chat-container__finder-user-status {
-  color: #3763F1;
+.chat-container__message-text {
+  color: rgba(255, 255, 255, 0.5);
+  font-weight: 400;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
-.chat-container__finder-user-open-button img {
-  width: 1.5625rem;
-  height: 1.5625rem;
+.chat-container__chats-add-button {
+  width: 1.25rem;
+  height: 1.25rem;
   vertical-align: middle;
+  transition: opacity 0.05s ease-in-out;
+}
+.chat-container__chats-add-button:hover {
+  cursor: pointer;
+  opacity: 50%;
 }
 
 /*# sourceMappingURL=chat_page.css.map */
