--- a/src/main/resources/static/css/pages/chat_page.scss
+++ b/src/main/resources/static/css/pages/chat_page.scss
@@ -1,409 +1,126 @@
 @import "../functions/math_functions";
+@import "../functions/extenstion_functions";
 @import "../functions/font";
 @import "../variables";
 
-$block-margin-top: px2Rem(20px);
-$message-text-color: #7F7F7F;
-$message-date-color: #BFBFBF;
-$message-underline-color: rgba(black, 0.025);
-$widget-bottom1-color: #F2F2F2;
-$statistics-name-color: rgba(black, 0.5);
-$finder-search-input: #F5F5F5;
-$finder-search-btn-hover: rgba($blue, 0.05);
-$finder-user-status: $blue;
-$finder-user-underline: rgba(0, 0, 0, .05);
+$chat-block-bg: #262626;
+$chat-block-header: #3A3A3A;
+$chat-block-desc-color: rgba(white, .5);
+$chats-block-shadow: 0 0 px2Rem(13.5px) px2Rem(-5px) rgba(black, .05);
+$message-bg: #292929;
+$message-hover-bg: #262626;
+$message-underline: rgba(white, .05);
+$message-text: rgba(white, .5);
+$message-date: rgba(white, .25);
 
 .chat-container {
-  padding: px2Rem(20px);
-  display: grid;
-  grid-template-columns: 1fr auto;
-  gap: px2Rem(60px);
+  display: flex;
+  gap: px2Rem(20px);
   width: 100%;
+  height: 100%;
+  justify-content: flex-end;
 
-  .block-title {
-    font-size: px2Rem(24px);
-    color: black;
+  .chat-block {
+    max-width: px2Rem(465px);
+    width: px2Rem(465px);
+    height: auto;
+    background-color: $chat-block-bg;
+    border-radius: px2Rem(10px);
   }
 
-  .block-shadow {
-    box-shadow: $default-shadow;
+  .chat-block-content {
+    height: px2Rem(430px);
+  }
+
+  .chat-block-header {
+    display: flex;
+    justify-content: space-between;
+    padding: px2Rem(20px);
+    background-color: $chat-block-header;
+    border-top-left-radius: px2Rem(10px);
+    border-top-right-radius: px2Rem(10px);
+  }
+
+  .chat-block-title {
+    color: white;
+    font-weight: $semi-bold;
+  }
+
+  &__no-messages-exception {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__no-messages-decoration {
+    width: px2Rem(150px);
+    height: auto;
+    margin-bottom: px2Rem(30px);
+  }
+
+  &__no-messages-title {
+    color: $chat-block-desc-color;
+    font-size: px2Rem(12px);
   }
 
   &__chats {
+    box-shadow: $chats-block-shadow;
+  }
+
+  &__chats-container {
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
   }
 
   &__message {
-    height: px2Rem(90px);
     width: 100%;
-    display: flex;
-    padding: px2Rem(18px);
-    background-color: white;
-    border-radius: px2Rem(20px);
-    justify-content: space-between;
-    position: relative;
-    margin-bottom: px2Rem(20px);
-    border: px2Rem(1px) solid transparent;
-
-    &:first-child {
-      margin-top: $block-margin-top;
-    }
-
-    &:last-child {
-      margin-bottom: px2Rem(40px);
-
-      &::after {
-        all: unset !important;
-      }
-    }
-
-    &::after {
-      content: "";
-      position: absolute;
-      left: 0;
-      bottom: 0;
-      width: 100%;
-      height: px2Rem(1px);
-      background-color: $message-underline-color;
-      z-index: 1;
-      margin-bottom: px2Rem(-10px);
-    }
+    background-color: $message-bg;
+    border: px2Rem(.5px) solid $message-underline;
+    border-left-width: 0;
+    border-right-width: 0;
+    border-top-width: 0;
+    padding: px2Rem(20px);
+    font-size: px2Rem(12px);
+    display: grid;
+    grid-template-columns: 1fr 3fr 3fr;
+    gap: 15px;
+    align-items: center;
+    transition: all 0.15s ease-in-out;
 
     &:hover {
-      border-color: $blue;
-    }
-  }
-
-  &__message-left {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-
-  &__message-right {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-  }
-
-  &__message-username {
-    font-size: px2Rem(16px);
-    font-weight: 600;
-    color: black;
-  }
-
-  &__message-text {
-    font-size: px2Rem(16px);
-    color: $message-text-color;
-    display: flex;
-
-    img {
-      margin-right: px2Rem(10px);
-      width: px2Rem(20px);
-      height: px2Rem(20px);
+      background-color: transparent;
     }
   }
 
   &__message-date {
-    font-size: px2Rem(16px);
-    color: $message-date-color;
+    color: $message-date;
+    font-weight: 400;
   }
 
-  &__message-edit-button {
-
-  }
-
-  &__add-chat-button {
-    font-weight: 600;
-    color: $blue;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
-
-    &:hover {
-      text-decoration: underline;
-    }
-  }
-
-  .widget-block {
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    padding: px2Rem(16px);
-    border-radius: $block-radius;
-    margin-top: px2Rem(20px);
-    font-size: 16px;
-  }
-
-  .widget-title {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: black;
-    margin-bottom: px2Rem(16px);
-  }
-
-  &__widgets-more-icon {
-    text-decoration: none;
-
-    img {
-      width: px2Rem(25px);
-      height: px2Rem(25px);
-      vertical-align: middle;
-    }
-  }
-
-  &__widgets-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  &__online {
-
-  }
-
-  &__online-users {
-
-  }
-
-  &__online-user {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
-    margin-bottom: px2Rem(20px);
-
-    &:last-child {
-      &::after {
-        all: unset !important;
-      }
-    }
-
-    &::after {
-      content: "";
-      position: absolute;
-      left: 0;
-      bottom: 0;
-      width: 100%;
-      height: px2Rem(1px);
-      background-color: $message-underline-color;
-      z-index: 1;
-      margin-bottom: px2Rem(-10px);
-    }
-  }
-
-  &__online-username {
-    color: $blue;
-  }
-
-  &__online-next {
-    text-decoration: none;
-
-    img {
-      width: px2Rem(25px);
-      height: px2Rem(25px);
-      vertical-align: middle;
-    }
-  }
-
-  &__online-more-button {
-    width: 100%;
-    background-color: $widget-bottom1-color;
-    color: black;
-    font-size: px2Rem(16px);
-    height: px2Rem(60px);
-    border-radius: calc($block-radius / 2);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: all 0.1s ease-in-out;
-    text-decoration: none;
-
-    &:hover {
-      transform: scale(0.975);
-    }
-  }
-
-  &__statistics-items {
-    display: flex;
-    flex-direction: column;
-  }
-
-  &__statistics-item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: px2Rem(16px);
-
-    &:last-child {
-      margin-bottom: 0;
-    }
-  }
-
-  &__statistics-name {
-    color: $statistics-name-color;
-  }
-
-  &__statistics-value {
-    color: $blue;
-  }
-
-  &__freq-friend-link {
-    text-decoration: none;
-    width: 100%;
-    padding: px2Rem(20px) 0;
-    background-color: $blue;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  &__message-username {
     color: white;
-    border-radius: calc($block-radius / 2);
-    transition: all 0.05s ease-in-out;
-
-    img {
-      width: px2Rem(25px);
-      height: px2Rem(25px);
-      vertical-align: center;
-      margin-right: px2Rem(10px);
-    }
-
-    &:hover {
-      opacity: 75%;
-    }
   }
 
-  &__widgets {
-    width: px2Rem(300px);
+  &__message-text {
+    color: $message-text;
+    font-weight: 400;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
-  &__finder-container {
-    display: flex;
-    flex-direction: column;
-    gap: px2Rem(20px);
-    justify-items: center;
-  }
-
-  &__finder-search-block {
-    display: grid;
-    grid-template-columns: 1fr auto;
-    gap: px2Rem(16px);
-  }
-
-  &__finder-search-input {
-    all: unset;
-    width: 100%;
-    border-radius: $block-radius / 2;
-    background-color: $finder-search-input;
-    padding: px2Rem(20px);
-    color: black;
-    box-sizing: border-box;
-  }
-
-  &__finder-search-button {
-    all: unset;
-    height: 100%;
-    aspect-ratio: 1 / 1;
-    border: px2Rem(1px) solid $blue;
-    border-radius: $block-radius / 2;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    img {
-      width: px2Rem(25px);
-      height: px2Rem(25px);
-      vertical-align: middle;
-    }
+  &__chats-add-button {
+    @include quadIcon(px2Rem(20px));
+    transition: opacity 0.05s ease-in-out;
 
     &:hover {
       cursor: pointer;
-      background-color: $finder-search-btn-hover;
-    }
-  }
-
-  &__finder-users-default-container {
-    display: flex;
-    flex-direction: column;
-    max-height: px2Rem(250px);
-    overflow-y: auto;
-    transition: mask-image 0.3s ease;
-    padding: px2Rem(20px);
-    background-color: rgba($blue, .05);
-    border-radius: $block-radius / 2;
-
-    &::-webkit-scrollbar {
-      display: none;
-    }
-  }
-
-  &__finder-users-empty {
-    width: 100%;
-    color: black;
-    font-weight: 600;
-    text-align: center;
-  }
-
-  &__finder-mini-title {
-    color: $blue;
-    font-weight: 600;
-    display: flex;
-    align-items: center;
-  }
-
-  &__finder-search-info {
-    background-color: $blue;
-    border-radius: px2Rem(10px);
-    font-size: px2Rem(11px);
-    color: white;
-    padding: px2Rem(10px);
-    margin-left: px2Rem(10px);
-    box-sizing: border-box;
-    font-weight: 500;
-  }
-
-  &__finder-user {
-    font-size: px2Rem(16px);
-    padding-bottom: px2Rem(20px);
-    margin-bottom: px2Rem(20px);
-    border: px2Rem(1px) solid $finder-user-underline;
-    border-left-width: 0;
-    border-right-width: 0;
-    border-top-width: 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    &:last-child {
-      border: none;
-      margin-bottom: 0;
-      padding-bottom: 0;
-    }
-  }
-
-  &__finder-user-left {
-    display: flex;
-    gap: px2Rem(30px);
-  }
-
-  &__finder-user-name {
-    font-weight: 600;
-  }
-
-  &__finder-user-status {
-    color: $finder-user-status;
-  }
-
-  &__finder-user-open-button {
-    img {
-      width: px2Rem(25px);
-      height: px2Rem(25px);
-      vertical-align: middle;
+      opacity: 50%;
     }
   }
 }
